--- a/index.html
+++ b/index.html
@@ -108,15 +108,22 @@
 
                 <p>No entanto, vetores surgem naturalmente em diversos contextos concretos, como o estudo do movimento, forças, deslocamentos e até aplicações computacionais. Nesses cenários, o significado geométrico e visual dos vetores é tão importante quanto sua formalização matemática.</p>
 
-                <p>Vetores são tão úteis para descrever o universo ao nosso redor e aparecem de forma tão recorrente em diferentes áreas que eu acredito que chega a ser injusto trabalhar e estudar vetores sem exlorar essas possibilidades. Claro que a formalização matemática não é apenas uma alegoria, pelo contrário, ela é fundamental para uma compreensão mais profunda. <abbr title="Pergunte a Manoela">Outrossim</abbr>, neste texto, a formalização matemática não será descartada, mas introduzida à medida que se torna necessária para conectar esse universo à intuição geométrica.</p>
+                <p>Vetores são tão úteis para descrever o universo ao nosso redor e aparecem de forma tão recorrente em diferentes áreas que eu acredito que chega a ser injusto trabalhar e estudar vetores sem exlorar essas possibilidades. Claro que a formalização matemática não é apenas uma alegoria, pelo contrário, ela é fundamental para uma compreensão mais profunda. Neste texto, a formalização matemática não será descartada, mas introduzida à medida que se torna necessária para conectar esse universo à intuição geométrica.</p>
             </section>
 
             <section>
                 <h2 id="add" class="titulo"><a href="#add">1.4. Conteúdo Adicional</a></h2>
 
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus tempora, quisquam commodi sunt exercitationem harum unde dolores voluptatum, in aperiam, rem similique at hic? Doloribus quae itaque eum accusamus iste. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi expedita pariatur ad velit aliquam sit amet natus ut unde architecto consequatur quis sed fugiat nihil laboriosam porro, numquam, eos reprehenderit!</p>
+                <p>Gostaria de parabenizar e recomendar o livro <a href="#">Digital Signs Theory</a>. Esse livro trata da <em>tranformação de Fourier</em> de forma extremamente didática e foi a principal inspiração para a construção desse site.</p>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, minima facilis? Modi laboriosam, doloremque voluptates tempore officia corporis aut hic culpa nihil repellat, aliquid eos rerum totam, pariatur dolorum sit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit molestiae voluptas tenetur quibusdam. Suscipit fugit sit hic quibusdam nam, aspernatur expedita, necessitatibus illo reiciendis dolorum, rerum iure praesentium debitis et.</p>
+                <p>Abaixo há alguns links referentes ao decorrer do livro.</p>
+
+                <ul>
+                    <a href="#">Somas</a>
+                </ul>
+
+                <p>Temos também alguns exercícios que recomenda-se resolver. Não se procupe com eles agora. Com o decorrer do livro haverão links ancorados para as mesmas páginas ao final de concetios novos.</p>
+
 
             </section>
         </article>
